# Congkak

./: .pre-commit-config.yaml  CONGKAK.md  README.md  congkak.py  congkak_old.py  core_functions.py  game.py  movelist.txt  pyproject.toml  script.py
.github/workflows/: ci.yml  pylint.yml
src/congkak/: congkak_old.py  constants.py  containers.py  core_functions.py  game.py  testing.py
src/congkak/board/: constants.py  containers.py  transforms.py
src/congkak/game/: custom_scenarios.py  display.py  instance.py  transforms.py
src/congkak/moves/: containers.py  transforms.py
src/pycongkak/: main.py  testing.py
src/pycongkak/board/: constants.py  containers.py  transforms.py
src/pycongkak/game/: custom_scenarios.py  display.py  instance.py
src/pycongkak/moves/: containers.py  transforms.py
tests/: conftest.py  test_containers.py
tests/board/: test_board_containers.py  test_board_transforms.py  test_containers.py  test_transforms.py
tests/game/: test_display.py
tests/moves/: test_game_end_scenario.py  test_moves_containers.py  test_moves_transforms.py  test_scenario_outcomes.py
